crates/wdl-engine/tests/tasks/cpu_limit/error.txt
error: task requires at least 4200 CPUs
   ┌─ tests/tasks/cpu_limit/source.wdl:17:5
   │
17 │     cpu: 4200
   │     ^^^^^^^^^ this requirement exceeds the available CPUs

